tablet: Fix disconnecting the tablet while the pen is still in proximity

libinput will send release and proximity out events after the device is
disconnected.
This just takes into account that tablet might be nullptr.

BUG: 442573